Adicionando a funcionalidade de copiar e colar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Aulas 70, 71, 72 de JavaScript</title>
+        <title>Aulas 70, 71, 72 e 73 de JavaScript</title>
         <!-- css -->
         <link rel="stylesheet" href="css/estilos.css">
         <!-- JavaScript -->
@@ -19,7 +19,7 @@
                 <p id="display" class="display">0</p>
             </div>
             <div class="div_teclas" id="div_teclas">
-                <button id="ton" class="tecla teclaOp">ON</button>
+                <button id="tcopy" class="tecla teclaOp">COPY</button>
                 <button id="tlimpar" class="tecla">CL</button>
                 <button id="t(" class="tecla num">(</button>
                 <button id="t)" class="tecla num">)</button>
@@ -41,6 +41,8 @@
                 <button id="td" class="tecla teclaOp op">/</button>
             </div>
         </div>
+
+        <input type="text" name="teste" id="teste" style="border: 1px solid #000; display: block; margin-inline: auto; margin-top: 5px; height: 20px; width: 245px;">
 
     </body>
 </html>
